testsuite/tests/module/mod40.stderr

mod40.hs:3:1: error:
    • Superclass cycle for ‘C1’
        whose superclasses include ‘C2’
        whose superclasses include ‘C1’
      Use UndecidableSuperClasses to accept this
    • In the class declaration for ‘C1’

mod40.hs:4:1: error:
    • Superclass cycle for ‘C2’
        whose superclasses include ‘C1’
        whose superclasses include ‘C2’
      Use UndecidableSuperClasses to accept this
    • In the class declaration for ‘C2’
